# productive-io-mcp-server

./: README.md  docker-compose.yaml  pyproject.toml
docker/server/: Dockerfile
mcp_server_productive/: server.py
